syntax = "proto3";

option csharp_namespace = "Server.Protos";
import "models.proto";
service TrackingService{
	rpc SendMessage(TrackingMessage) returns (TrackingResponse);
}
